[EDIT]Kata 8. Kata 8 completada exitosamente.